fix mobile gap between header and main

--- a/css/about.css
+++ b/css/about.css
@@ -35,7 +35,7 @@
   letter-spacing: -0.25px;
   text-align: center;
   color: #36536b;
-  margin-bottom: 44px;
+  margin: 22px 0 42px;
   height: 152px;
 }
 
@@ -214,7 +214,6 @@
   .info-numbers {
     background-color: #edf3f8;
     width: 100%;
-
   }
 
   .mobile-img {
@@ -260,7 +259,6 @@
 
   .info-numbers__item::after {
     bottom: 0;
-
   }
 
   .info-numbers__divider {
@@ -268,5 +266,4 @@
   }
 
   /* info numbers section ends here */
-
 }
