--- a/css/contact.css
+++ b/css/contact.css
@@ -37,7 +37,7 @@
   color: #36536b;
   font-family: "DM Serif Display", serif;
   font-size: 32px;
-  padding-bottom: 37px;
+  padding: 17px 0 37px;
   line-height: 38.6px;
 }
 
